@@ -1,3 +1,9 @@
+2008-09-09  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/win/wgraph.c (drawgraph): Force update of cursor position after
+	every polyline.
+	Bugfix
+
 2008-09-06  Juergen Wieferink <wieferink@freenet.de>
 
 	* src/term.c (enhanced_recursion):  Add curly braces {} to the list of
